--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "gatsby-plugin-catch-links": "^2.2.1",
     "gatsby-plugin-feed": "^2.4.1",
     "gatsby-plugin-flow": "^1.2.1",
+    "gatsby-plugin-gdpr-cookies": "^1.0.7",
+    "gatsby-plugin-google-analytics": "^2.3.4",
     "gatsby-plugin-google-gtag": "^2.0.0",
     "gatsby-plugin-manifest": "^2.3.3",
     "gatsby-plugin-netlify": "^2.2.1",
@@ -77,6 +79,7 @@
     "normalize-scss": "^7.0.1",
     "prismjs": "^1.20.0",
     "react": "^16.13.1",
+    "react-cookie-consent": "^5.1.0",
     "react-disqus-comments": "^1.4.0",
     "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1"
